.metadata/.plugins/org.eclipse.cdt.ui/Classes.build.log
18:39:40 **** Incremental Build of configuration Debug for project Classes ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Cat.o" "..\\src\\Cat.cpp" 
..\src\Cat.cpp:11:6: error: 'Cat' has not been declared
 void Cat::speak() {
      ^~~
..\src\Cat.cpp:15:6: error: 'Cat' has not been declared
 void Cat::jump(){
      ^~~

18:39:40 Build Failed. 2 errors, 0 warnings. (took 388ms)

